# lucus

./: Cargo.toml
docs/plans/: 2026-03-02-feat-lucus-git-worktree-manager-plan.md
src/: config.rs  files.rs  git.rs  hooks.rs  main.rs  output.rs
src/commands/: init.rs  list.rs  mod.rs  new.rs  query.rs  remove.rs  switch.rs
